chore: delete formal connection funcs
